compiler/tests/success/typing/x86-64/bug_1479.jazz
export fn main () -> reg u32 {
  reg u32 x;
  reg u64 y = 1;
  ?{}, x = #ADD_64(y, y);
  return x;
}
