compiler/tests/fail/typing/x86-64/bug_69.jazz
export fn f (reg u64 x y) -> reg u64 {
   reg u64 z;
   x = x;
   y = y;
   ?{}, z = (32u)#AND(x, y);
   return z;
}
